--- a/help/templates/style.css
+++ b/help/templates/style.css
@@ -6,7 +6,7 @@ License: GPL v3
 
 /* GENERAL */
 body {
-	color: #A31313;
+	color: #802020;
 	margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
