--- a/main/test/org/iremake/network/ClientServerConsole.form
+++ b/main/test/org/iremake/network/ClientServerConsole.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Client Server Sniffer"/>
+    <Property name="title" type="java.lang.String" value="Client Server Console"/>
     <Property name="locationByPlatform" type="boolean" value="true"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[600, 400]"/>
@@ -28,16 +28,14 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="clientScrollPane" pref="800" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="clientScrollPane" alignment="1" pref="800" max="32767" attributes="0"/>
                   <Component id="serverScrollPane" alignment="1" pref="800" max="32767" attributes="0"/>
-                  <Component id="serverStatus" alignment="0" max="32767" attributes="0"/>
-                  <Component id="clientStatus" alignment="0" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Component id="serverStart" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="serverStop" min="-2" max="-2" attributes="0"/>
@@ -45,7 +43,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="clientStart" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="clientRegister" min="-2" max="-2" attributes="0"/>
+                              <Component id="clientName" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -59,34 +57,25 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="serverStatus" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="serverStart" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="serverStop" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="serverScrollPane" min="-2" pref="200" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="clientStatus" min="-2" max="-2" attributes="0"/>
+              <Component id="serverScrollPane" min="-2" pref="300" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="clientStart" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="clientRegister" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="clientName" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="clientScrollPane" pref="200" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="clientScrollPane" pref="300" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="serverStatus">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Server: down"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="serverStart">
       <Properties>
         <Property name="text" type="java.lang.String" value="Start"/>
@@ -119,16 +108,14 @@
         <Component class="javax.swing.JTextArea" name="serverTextArea">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="12" style="0"/>
+            </Property>
             <Property name="rows" type="int" value="5"/>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="clientStatus">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Clients: none"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="clientStart">
       <Properties>
         <Property name="text" type="java.lang.String" value="Start"/>
@@ -137,12 +124,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clientStartActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="clientRegister">
+    <Component class="javax.swing.JButton" name="clientName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Register"/>
+        <Property name="text" type="java.lang.String" value="Name"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clientRegisterActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clientNameActionPerformed"/>
       </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="clientScrollPane">
@@ -161,6 +148,9 @@
         <Component class="javax.swing.JTextArea" name="clientTextArea">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="12" style="0"/>
+            </Property>
             <Property name="rows" type="int" value="5"/>
           </Properties>
         </Component>
