--- a/help/templates/style.css
+++ b/help/templates/style.css
@@ -10,5 +10,9 @@ body {
 	margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 0.9em;
+}
+
+ul {
+	list-style-type: none;
+	margin-left: 10px
 }
