--- a/main/test/org/iremake/applications/OriginalMapImportApp.form
+++ b/main/test/org/iremake/applications/OriginalMapImportApp.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Imperialism Map Import"/>
@@ -85,7 +85,7 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="importmapTextField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="import map file"/>
+        <Property name="text" type="java.lang.String" value="C:\u005c40_Programmieren\u005c02_Java Projects\u005cImperialism Remake\u005ctools\u005cs0.imported.map" containsInvalidXMLChars="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="chooseImportmapButton">
@@ -99,7 +99,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="scenarioTextField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="scenario file"/>
+        <Property name="text" type="java.lang.String" value="C:\u005c40_Programmieren\u005c02_Java Projects\u005cImperialism Remake\u005ctools\u005cscenario.Europe1814.xml" containsInvalidXMLChars="true"/>
         <Property name="toolTipText" type="java.lang.String" value="Will be modified in the process!"/>
       </Properties>
     </Component>
